summary-table: add prop types and fix spacing

--- a/public/js/components/Analysis/Analysis.sass
+++ b/public/js/components/Analysis/Analysis.sass
@@ -117,6 +117,11 @@
   align-items: center
   justify-content: center
 
+.summaryVariableColumn
+  display: flex
+  flex-direction: column
+  margin-top: 10px
+
 .summaryVariableHeaderCell
   flex-grow: 1
   flex-basis: 0
@@ -132,6 +137,7 @@
 
 .summaryVariableContainer
   +fillContainer
+  margin-top: 10px
 
 .footerRow
   background-color: #fbfbfb
